--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,20 +4,21 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-google-signin/google-signin": "^10.0.1",
     "expo": "~49.0.13",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-native": "0.72.5",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "react-native-google-signin": "^2.1.1"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
