Voltando pagina de login

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -24,6 +24,8 @@
       },
       "package": "com.anonymous.frontend"
     },
+    "plugins":
+      ["@react-native-google-signin/google-signin"],
     "web": {
       "favicon": "./assets/favicon.png"
     }
