--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@react-native-google-signin/google-signin": "^10.0.1",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.13",
     "expo-linear-gradient": "~12.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-native": "0.72.5",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
