--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-css": "^2.1.2",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0"
   },
