Adicionando parte do login do google com o firebase

--- a/frontend/android/app/build.gradle
+++ b/frontend/android/app/build.gradle
@@ -76,14 +76,25 @@ def enableProguardInReleaseBuilds = (findProperty('android.enableProguardInRelea
  */
 def jscFlavor = 'org.webkit:android-jsc:+'
 
+ext{
+    ndkVersion = rootProject.ext.ndkVersion
+    minSdkVersion = rootProject.ext.minSdkVersion
+    targetSdkVersion = rootProject.ext.targetSdkVersion
+    compileSdkVersion = 30
+}
+
 android {
     ndkVersion rootProject.ext.ndkVersion
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace 'com.anonymous.frontend'
+    namespace 'com.anonymous.readyrescue'
     defaultConfig {
-        applicationId 'com.anonymous.frontend'
+        javaCompileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+        }
+        applicationId 'com.anonymous.readyrescue'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
