--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,21 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-community/google-signin": "^5.0.0",
+    "@react-native-firebase/app": "^18.7.1",
+    "@react-native-firebase/auth": "^18.7.1",
     "@react-native-google-signin/google-signin": "^10.1.1",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.2",
     "expo": "^49.0.16",
+    "expo-dev-client": "~2.4.12",
     "expo-linear-gradient": "~12.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-elements": "^3.4.3",
-    "react-native-google-signin": "^2.1.1",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5"
   },
   "devDependencies": {
