--- a/readyrescue/app.json
+++ b/readyrescue/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "frontend",
+    "name": "readyrescue",
     "slug": "frontend",
     "version": "1.0.0",
     "orientation": "portrait",
