--- a/readyrescue/package.json
+++ b/readyrescue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "readyrescue",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^18.7.1",
     "@react-native-firebase/auth": "^18.7.1",
+    "@react-native-firebase/firestore": "^18.7.1",
     "@react-native-google-signin/google-signin": "^10.1.1",
+    "@react-native-masked-view/masked-view": "0.2.9",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
@@ -21,11 +24,15 @@
     "expo-linear-gradient": "~12.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.14.0",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5"
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
