--- a/readyrescue/package.json
+++ b/readyrescue/package.json
@@ -15,7 +15,6 @@
     "@react-native-firebase/auth": "^18.7.1",
     "@react-native-firebase/firestore": "^18.7.1",
     "@react-native-google-signin/google-signin": "^10.1.1",
-    "@react-native-masked-view/masked-view": "0.2.9",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
@@ -24,6 +23,7 @@
     "expo-linear-gradient": "~12.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "^2.6.0",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
